# deep-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: main.py  settings.py  tavily.py  utils.py
src/agents/: planner.py  researcher.py  search.py  searcher.py  synthesizer.py
src/ui/: demo.html
static/: demo.html
terraform/: cloudrun.tf  iam.tf  main.tf  outputs.tf  providers.tf  terrform.tfvars.example  variables.tf
tests/: test_api.py  test_planner.py  test_researcher.py  test_search.py  test_synthesizer.py
