[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
